# language-client-highlight-bug

./: CHANGELOG.md  minimal-vimrc  titi.cabal
app/: Main.hs
