cabal-version:      2.4
name:               titi
version:            0.1.0.0
author:             Toto
maintainer:         toto@titi.com

extra-source-files: CHANGELOG.md

executable titi
    main-is:          Main.hs
    build-depends:    base >=4.12.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
